# arch-trainer

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_SPEC.md  README.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: access.py  auth.py  config.py  llm.py  main.py  models.py  prompts.py  schemas.py  services.py  worker.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 0001_initial.py  0002_study_notes.py  0003_multiuser.py  0004_favorite_models.py  0005_job_status.py  0006_v5.py  0007_lang_algo.py  0008_running_since.py  0009_gen_hint.py  0010_pattern_reviews.py  0011_interview.py  0012_code_tests.py
backend/app/routers/: auth.py  interview.py  library.py  models.py  review.py  scenarios.py  sessions.py  stats.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  CodeEditor.jsx  ExcalidrawCanvas.jsx  Markdown.jsx  Mermaid.jsx  MermaidBuilder.jsx  ModelInput.jsx  Tabs.jsx  api.js  codeRunner.js  styles.css
frontend/src/views/: Answering.jsx  Artifacts.jsx  Dashboard.jsx  Interview.jsx  Login.jsx  Public.jsx  Result.jsx  Review.jsx  Setup.jsx  Study.jsx
